--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 						<h1>Edmundo Fernandes Portfolio<br />
 						</h1>
 						<p>Skilled Data Analyst with multiple years of experience in Python, SQL, Power BI and Big Data. I have honed my skills in transforming data into actionable insights that drive business decisions. I am passionate about solving complex problems and delivering data driven solutions. My expertise spans from finance, management and wellbeing where i have successfuly executed multiple projects and tasks that have significantly impacted organizational performance.<a href="https://www.linkedin.com/in/edmundo-fernandes/"></a></a><br />
-						  <a href="https://github.com/Young-Jedi79?tab=repositories">Github Projects</a>.</p>
+						  <a href=""></a>.</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solid solo fa-arrow-down scrolly">Continue</a></li>
 						</ul>
@@ -30,7 +30,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="https://www.linkedin.com/in/edmundo-fernandes/" class="logo">Edmundo the analyst</a>
+						<a href="https://www.linkedin.com/in/edmundo-fernandes/" class="logo">Edmundo the Data Analyst</a>
 					</header>
 
 				<!-- Nav -->
@@ -51,13 +51,13 @@
 							<article class="post featured">
 								<header class="major">
 									
-									<h2><a href="https://github.com/Young-Jedi79/Machine-Learning-for-detection-and-prediction-of-stock-market-bubbles">Machine Learning to identify stock market bubble's <br />
+									<h2><a href="">Edmundo Fernandes <br />
 									</a></h2>
-									<p>This project focus on evaluating the accuracy and effectiveness of Time Series Analysis, Neural  Networks, LSTM, Topological Data Analysis, Backward sup Augmented Dickey-Fuller (BSADF) method and Generalized Autoregressive Conditional Heteroskedasticity (GARCH) in identifying Stock Market Bubble's on S&P 500.</p>
+									<p>Hello. I am Edmundo Fernandes, a passionate and results driven Data Analyst with a Masters Degree in Data Analysis for Business from CCT College Dublin. I have a solid educational doundation and 3 years of hands on experience, I specialize in leveraging data to analyse, identify and solve business problems and drive strategic decisions. My academic journey has equipped me with in depth knowledge of advanced data analysis techniques, statistical medeling and business inteligence. During my masters program, I focused on integrating analytical skills with business acumen to uncover insights that directly impact organizational growth and efficiency. Professionally, I have had the privilege of working in diverse industries such as Sales, Content Moderation, Health & Fitness and Business Management.I am proficient in programming languages such as Python, SQL, and Microsoft Power BI for database management My skills also include Excell, C++, Linux and Big Data Query. Aside from my technical skills, I pride myself on my ability to communicate complex data findings to non technical audiences, managing competent and professional data analysts and ensure insights are understood, actionable and KPI's are met. I am a firm believer in continuous learning and regularly take new online courses to stay updated with the latest advancements in the field. Thank you for taking your time to learn bout me.</p>
 								</header>
-								<a href="https://github.com/Young-Jedi79/Machine-Learning-for-detection-and-prediction-of-stock-market-bubbles" class="image main"><img src="images/15-3-2021-6-34-27-pm.png" alt="" /></a>
+								<a href="" class="image main"><img src="images/Edmundo.png" alt="" /></a>
 								<ul class="actions special">
-									<li><a href="https://github.com/Young-Jedi79/Machine-Learning-for-detection-and-prediction-of-stock-market-bubbles" class="button large">View Project</a></li>
+									<li><a href="" class="button large">Thank you</a></li>
 								</ul>
 							</article>
 
@@ -73,6 +73,19 @@
 									<p>For this project, I will explore Covid dataset, and will perform the following steps: Exploratory Data analysis, NLTK (Natural Language Toolkit for Symptom Analysis, Data Cleaning, Visualizations, Neural Networks, Feedforward Neural Network, Recurrent Neural Networks).</p>
 									<ul class="actions special">
 										<li><a href="https://github.com/Young-Jedi79/Predict-the-number-of-hospital-days-required-if-a-person-has-or-had-Covid-19-vaccine" class="button">View Project</a></li>
+									</ul>
+								</article>
+
+								<article>
+									<header>
+										
+										<h2><a href="https://github.com/Young-Jedi79/Machine-Learning-for-detection-and-prediction-of-stock-market-bubbles">Machine Learning to identify stock market bubble's.<br />
+											</a></h2>
+									</header>
+									<a href="https://github.com/Young-Jedi79/Machine-Learning-for-detection-and-prediction-of-stock-market-bubbles" class="image fit"><img src="images/15-3-2021-6-34-27-pm.png" alt="" /></a>
+									<p>This project focus on evaluating the accuracy and effectiveness of Time Series Analysis, Neural  Networks, LSTM, Topological Data Analysis, Backward sup Augmented Dickey-Fuller (BSADF) method and Generalized Autoregressive Conditional Heteroskedasticity (GARCH) in identifying Stock Market Bubble's on S&P 500.</p>
+									<ul class="actions special">
+										<li><a href="https://github.com/Young-Jedi79/Machine-Learning-for-detection-and-prediction-of-stock-market-bubbles" class="button">View Project</a></li>
 									</ul>
 								</article>
 								<article>
